--- a/HMS.DataFrame/HMS.DataFrame.csproj
+++ b/HMS.DataFrame/HMS.DataFrame.csproj
@@ -16,6 +16,9 @@
     <None Update="diseases.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="room.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
